--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
     </head>
     <body>
         <h1>Index</h1>
+        <header>
+            <img src="">
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+        </header>
+        <div class="content"></div>
     </body>
 </html>
