--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Index</h1>
         <header>
-            <img src="">
+            <img src="curseFichier 1.svg">
             <h1></h1>
             <h1></h1>
             <h1></h1>
