--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
         <link rel="icon" href="web.ico" type="image/x-icon">
     </head>
     <body>
-        <h1>Index</h1>
         <header>
-            <img src="curseFichier 1.svg">
-            <h1></h1>
-            <h1></h1>
-            <h1></h1>
-            <h1></h1>
-            <h1></h1>
+            <img class="logo" src="curseFichier 1.svg">
+            <h1>INDEX</h1>
+            <h1>TESTEUR DE LOGICIEL</h1>
+            <h1>TEMPLATE WEB</h1>
         </header>
         <div class="content"></div>
     </body>
