tweaks to navigation

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="curseFichier 1.svg">
+            <img class="logo" src="curseFichier 1.svg" >
+            <h1></h1>
             <h1>INDEX</h1>
             <h1>TESTEUR DE LOGICIEL</h1>
             <h1>TEMPLATE WEB</h1>
         </header>
-        <div class="content"></div>
+        <div class="content">
+
+        </div>
     </body>
 </html>
