ajout de la mini-icone

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>web</title>
+        <title>Gaussian Blurb</title>
         <link rel="stylesheet" href="main.css">
-        <link rel="icon" href="web.ico" type="image/x-icon">
+        <link rel="icon" href="mini.ico" type="image/x-icon">
     </head>
     <body>
         <header>
