changed the branding

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="curseFichier 1.svg" >
-            <h1></h1>
-            <h1>INDEX</h1>
+            <img class="logo" src="curseFichier 4.svg" >
+            <h1 style="text-align: left; margin-left: 1rem;">Gaussian Blurb</h1>
+            <h1>ARTICLES</h1>
             <h1>TESTEUR DE LOGICIEL</h1>
             <h1>TEMPLATE WEB</h1>
         </header>
