--- a/index.html
+++ b/index.html
@@ -8,13 +8,47 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="curseFichier 5.svg">
+            <img class="logo" style="margin-right: auto;" src="GFichier 14.svg">
+            <img class="logo" style="margin: auto;" src="G+Fichier 15.svg">
+            <img class="logo" style="margin-left:auto;" src="G+BFichier 16.svg">
+        </header>
+
+        <div class="content">
+            <img src="test.jpeg">
+            <img src="test.jpeg">
+
+        </div>
+
+        <footer>
             <h1>ARTICLES</h1>
             <h1>TESTEUR DE LOGICIEL</h1>
             <h1>TEMPLATE WEB</h1>
-        </header>
-        <div class="content">
-
-        </div>
+        </footer>
     </body>
 </html>
+<script>
+
+function makeHeaderFixedOnScroll() {
+    const header = document.querySelector('header');
+    const stickyClass = 'fixed'; // Class to apply for fixed positioning
+
+    // Function to toggle fixed class based on scroll position
+    const toggleHeaderPosition = () => {
+        if (window.scrollY > 10) {
+            header.classList.add(stickyClass);
+        } else {
+            header.classList.remove(stickyClass);
+        }
+    };
+
+    // Initial check
+    toggleHeaderPosition();
+    
+    // Add scroll event listener
+    window.addEventListener('scroll', toggleHeaderPosition);
+}
+
+    // Call the function when the DOM is fully loaded
+    document.addEventListener('DOMContentLoaded', makeHeaderFixedOnScroll);
+
+</script>
