further changes to homepage
-2 fonts added
-changed homepage layout

--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
         </header>
 
         <div class="content">
-            <img src="test.jpeg">
-            <img src="test.jpeg">
-
+            <div class="type1">            
+                <img src="test.jpeg">
+                <h3>Testeur de logiciel</h3>
+            </div>
+            <div class="type2">
+                <div class="article">
+                    <img src="test.jpeg">
+                    <h3>Template web</h3>
+                </div>
+                <div class="article">
+                    <img src="test.jpeg">
+                    <h3>Template web</h3>
+                </div>
+            </div>
         </div>
 
         <footer>
