design final + nettoyage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <img class="logo" style="margin-right: auto;" src="GFichier 14.svg">
-            <img class="logo" style="margin: auto;" src="G+Fichier 19.svg">
+            <img class="logo" style="margin: auto;" src="gb-longFichier 33.svg">
             <img class="logo" style="margin-left:auto;" src="G+BFichier 16.svg">
         </header>
         <footer>
