changed the font, design iterations

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <footer>
             <div class="footer-container">
                 <img src="burgFichier 24.svg">
-                <h1>MENU</h1>
+                <h2>MENU</h2>
             </div>
         </footer>
 
@@ -25,6 +25,14 @@
                     <h3>TESTEUR DE LOGICIEL</h3>   
                     <img src="test2.jpeg">
                 </div>
+                <p>
+                    <br><br><br><br><br>
+                    Le testeur de logiciel est une personne ayant pour mission de repérer les erreurs dans les logiciels produits par d’autres informaticiens ainsi que l’adhérence au cahier des charges du logiciel.  <br>
+                    <br>Un testeur de logiciel va produire un rapport pour chaque version du produit contenant les erreurs logicielles mais aussi des conseils qualité et des démonstration concrètes des cas d’utilisations. En sommes, il va vérifier que le programme fonctionne et réponds bien à toutes les attentes du client. <br>
+                    <br>Afin de réaliser ce rapport, le testeur logiciel va donc identifier, implémenter, installer et exécuter les tests les plus adaptés. Il va ensuite interpréter les résultats de ces tests.  <br>
+                    <br>[...]<br>
+                    <br>— ARTICLE DU 16.OCT 2024
+                </p>
             </div>
             <div class="type2">
                 <div class="article">
@@ -47,7 +55,7 @@ function makeHeaderFixedOnScroll() {
 
     // Function to toggle fixed class based on scroll position
     const toggleHeaderPosition = () => {
-        if (window.scrollY > 170) {
+        if (window.scrollY > 195) {
             header.classList.add(stickyClass);
         } else {
             header.classList.remove(stickyClass);
