--- a/index.html
+++ b/index.html
@@ -24,24 +24,36 @@
                 <div class="article">
                     <h3>TESTEUR DE LOGICIEL</h3>   
                     <img src="test2.jpeg">
+                    <p>
+                        Le testeur de logiciel est une personne ayant pour mission de repérer les erreurs dans les logiciels produits par d’autres informaticiens ainsi que l’adhérence au cahier des charges du logiciel.  <br>
+                        <br>Un testeur de logiciel va produire un rapport pour chaque version du produit contenant les erreurs logicielles mais aussi des conseils qualité et des démonstration concrètes des cas d’utilisations. En sommes, il va vérifier que le programme fonctionne et réponds bien à toutes les attentes du client. <br>
+                        <br>Afin de réaliser ce rapport, le testeur logiciel va donc identifier, implémenter, installer et exécuter les tests les plus adaptés. Il va ensuite interpréter les résultats de ces tests.  <br>
+                        <br>[...]<br>
+                        <br>— ARTICLE DU 16.OCT 2024
+                    </p>
                 </div>
-                <p>
-                    <br><br><br><br><br>
-                    Le testeur de logiciel est une personne ayant pour mission de repérer les erreurs dans les logiciels produits par d’autres informaticiens ainsi que l’adhérence au cahier des charges du logiciel.  <br>
-                    <br>Un testeur de logiciel va produire un rapport pour chaque version du produit contenant les erreurs logicielles mais aussi des conseils qualité et des démonstration concrètes des cas d’utilisations. En sommes, il va vérifier que le programme fonctionne et réponds bien à toutes les attentes du client. <br>
-                    <br>Afin de réaliser ce rapport, le testeur logiciel va donc identifier, implémenter, installer et exécuter les tests les plus adaptés. Il va ensuite interpréter les résultats de ces tests.  <br>
-                    <br>[...]<br>
-                    <br>— ARTICLE DU 16.OCT 2024
-                </p>
+
             </div>
             <div class="type2">
                 <div class="article">
                     <h3>TEMPLATE WEB</h3>
                     <img src="test.jpeg">
+                    <p>
+                        <br>
+                        Un gabarit permet de définir une structure réutilisable pour assurer la cohérence d’un site web. L’apparence du site web étant définie par le gabarit, seul le contenu doit être écrit pour une nouvelle page et un changement du gabarit affecte toutes les pages du site web. 
+                        <br>
+                    </p>
                 </div>
                 <div class="article">
                     <h3>SERVEUR WEB</h3>
                     <img src="test.jpeg">
+                    <p>
+                        <br>
+                        Le terme serveur web désigne à la fois un logiciel et l’ordinateur sur lequel ce logiciel tourne. Il sert à répondre aux requêtes postées sur le réseau en utilisant un protocole comme HTTP, le plus commun. Le terme est le même peu importe que ce soit pour un réseau privé (intranet) ou public (internet).  
+                        <br><br>
+                        [...]
+                        <br><br>
+                    </p>
                 </div>
             </div>
         </div>
