ajout images thématiques

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="type1">
                 <div class="article">
                     <h3>TESTEUR DE LOGICIEL</h3>   
-                    <img src="test2.jpeg">
+                    <img src="testeur de logiciel.jpeg">
                     <p>
                         Le testeur de logiciel est une personne ayant pour mission de repérer les erreurs dans les logiciels produits par d’autres informaticiens ainsi que l’adhérence au cahier des charges du logiciel.  <br>
                         <br>Un testeur de logiciel va produire un rapport pour chaque version du produit contenant les erreurs logicielles mais aussi des conseils qualité et des démonstration concrètes des cas d’utilisations. En sommes, il va vérifier que le programme fonctionne et réponds bien à toutes les attentes du client. <br>
@@ -32,26 +32,66 @@
                         <br>— ARTICLE DU 16.OCT 2024
                     </p>
                 </div>
-
             </div>
             <div class="type2">
-                <div class="article">
-                    <h3>TEMPLATE WEB</h3>
-                    <img src="test.jpeg">
-                    <p>
-                        <br>
-                        Un gabarit permet de définir une structure réutilisable pour assurer la cohérence d’un site web. L’apparence du site web étant définie par le gabarit, seul le contenu doit être écrit pour une nouvelle page et un changement du gabarit affecte toutes les pages du site web. 
-                        <br>
-                    </p>
-                </div>
-                <div class="article">
+                <div class="article" style="border:0">
                     <h3>SERVEUR WEB</h3>
-                    <img src="test.jpeg">
+                    <img src="open source.jpg">
                     <p>
                         <br>
                         Le terme serveur web désigne à la fois un logiciel et l’ordinateur sur lequel ce logiciel tourne. Il sert à répondre aux requêtes postées sur le réseau en utilisant un protocole comme HTTP, le plus commun. Le terme est le même peu importe que ce soit pour un réseau privé (intranet) ou public (internet).  
                         <br><br>
                         [...]
+                        <br><br>
+                    </p>
+                </div>
+                <div class="article">
+                    <h3>TEMPLATE WEB</h3>
+                    <img src="template web.jpg">
+                    <p>
+                        <br>
+                        Un gabarit permet de définir une structure réutilisable pour assurer la cohérence d’un site web. L’apparence du site web étant définie par le gabarit, seul le contenu doit être écrit pour une nouvelle page et un changement du gabarit affecte toutes les pages du site web. 
+                        <br><br>
+                        [...]
+                        <br><br>
+                    </p>
+                </div>
+            </div>
+            <div class="type1">
+                <div class="article">
+                    <h3>AMAZON WEB SERVICES</h3>   
+                    <img src="aws.jpg">
+                    <p><br>
+                        Amazon Web Services. C’est l’offre de server hosting de la multinationale Amazon. Ils furent un des premiers hébergeurs à offrir des offres variables, c’est à dire que les prix d’abonnements évoluent en fonction du trafic utilisé. Leurs prix restent aujourd’hui imbattables et c’est une des parties du business d’Amazon qui leur fait le plus de profits. <br>
+                        <br>Grâce à leur taille importante, ils ont des offres adaptées à presque tous les besoins. 
+                        <br>
+ 
+                        <br>[...]<br>
+                        <br>— ARTICLE DU 16.OCT 2024
+                    </p>
+                </div>
+            </div>
+            <div class="type2">
+                <div class="article" style="border:0">
+                    <h3>MYSQL</h3>
+                    <img src="sql.jpg">
+                    <p>
+                        <br>
+                        Le SQL de MySQL signifie “structured query language” (langage de requêtes structurées). Le SQL est le langage standard le plus utilisé pour gérer les accès aux bases de données.  
+                        <br><br>
+                        [...] 
+                        <br><br>
+                    </p>
+                </div>
+                <div class="article">
+                    <h3>URL</h3>
+                    <img src="url.jpg">
+                    <p>
+                        <br>
+                        Une URL, pour Uniform ressource locator, est une chaine de caractères uniforme qui permet d’identifier une ressource sur le world wide web. 
+                        Le format d’une URL est standardisé. Elle commence toujours par le protocole utilisé suivi de « : ».
+                        <br><br>
+                        [...] 
                         <br><br>
                     </p>
                 </div>
