fix logo + début page article

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <header>
-            <img class="logo" style="margin-right: auto;" src="GFichier 14.svg">
-            <img class="logo" style="margin: auto;" src="gb-longFichier 33.svg">
-            <img class="logo" style="margin-left:auto;" src="G+BFichier 16.svg">
+            <img class="logo" style="margin-right: auto;" src="logoG.svg">
+            <img class="logo" style="margin: auto;" src="logoLOGO.svg">
+            <img class="logo" style="margin-left:auto;" src="logoB.svg">
         </header>
         <footer>
             <div class="footer-container">
