--- a/templateweb.html
+++ b/templateweb.html
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Gaussian Blurb</title>
+        <title>Testeur de Logiciel</title>
         <link rel="stylesheet" href="main.css">
         <link rel="icon" href="mini.ico" type="image/x-icon">
     </head>
     <body>
         <header>
-            <img class="logo" style="margin-right: auto;" src="GFichier 14.svg">
-            <img class="logo" style="margin: auto;" src="gb-longFichier 33.svg">
-            <img class="logo" style="margin-left:auto;" src="G+BFichier 16.svg">
+            <img class="logo" style="margin-right: auto;" src="logoG.svg">
+            <img class="logo" style="margin: auto;" src="logoLOGO.svg">
+            <img class="logo" style="margin-left:auto;" src="logoB.svg  ">
         </header>
         <footer>
             <div class="footer-container">
@@ -20,7 +20,14 @@
         </footer>
 
         <div class="content">
-            
+            <div class="inside">
+                <h3>TESTEUR DE LOGICIEL</h3>   
+                <p>
+                    Le testeur de logiciel est une personne ayant pour mission de repérer les erreurs dans les logiciels produits par d’autres informaticiens ainsi que l’adhérence au cahier des charges du logiciel.  <br>
+                    <br><br>
+                </p>
+                <img src="testeur de logiciel.jpeg">
+            </div>
         </div>
     </body>
 </html>
