first link connection made

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
         <div class="content">
             <div class="type1">
-                <div class="article">
+                <a href="./testeur_de_logiciel.html">
+                <div class="article" >
                     <h3>TESTEUR DE LOGICIEL</h3>   
                     <img src="testeur de logiciel.jpeg">
                     <p>
@@ -32,6 +33,7 @@
                         <br>— ARTICLE DU 16.OCT 2024
                     </p>
                 </div>
+                </a>
             </div>
             <div class="type2">
                 <div class="article" style="border:0">
