--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                         <br>[...]<br>
                         <br>— ARTICLE DU 16.OCT 2024
                     </p>
-                </a>
                 </div>
                 </a>
             </div>
             <div class="type2">
+                <a href="./serveur_web.html">
                 <div class="article" style="border:0">
                     <h3>SERVEUR WEB</h3>
                     <img src="open source.jpg">
@@ -48,6 +48,7 @@
                         <br><br>
                     </p>
                 </div>
+                </a>
                 <div class="article">
                     <h3>TEMPLATE WEB</h3>
                     <img src="template web.jpg">
