--- a/serveur_web.html
+++ b/serveur_web.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Testeur de Logiciel</title>
+        <title>Serveur Web</title>
         <link rel="stylesheet" href="main.css">
         <link rel="icon" href="mini.ico" type="image/x-icon">
     </head>
@@ -21,22 +21,16 @@
 
         <div class="content">
             <div class="inside">
-                <h3>TESTEUR DE LOGICIEL</h3>   
+                <h3>SERVEUR WEB</h3>   
                 <p>
                     Le testeur de logiciel est une personne ayant pour mission de repérer les erreurs dans les logiciels produits par d’autres informaticiens ainsi que l’adhérence au cahier des charges du logiciel.  <br>
                     <br><br><br>
                 </p>
-                <img src="testeur de logiciel.jpeg">
+                <img src="open source.jpg">
                 <p>
-                    <br><br>Un testeur de logiciel va produire un rapport pour chaque version du produit contenant les erreurs logicielles mais aussi des conseils qualité et des démonstration concrètes des cas d’utilisations. En sommes, il va vérifier que le programme fonctionne et réponds bien à toutes les attentes du client. 
-
-                    <br><br>Afin de réaliser ce rapport, le testeur logiciel va donc identifier, implémenter, installer et exécuter les tests les plus adaptés. Il va ensuite interpréter les résultats de ces tests.  <br>
-                    <br>Les tests réalisés peuvent être classés dans plusieurs groupes :  <br><br>
-                
-                    -Les tests fonctionnels pour vérifier l’adhérence au cahier des charges.<br>
-                    -Les tests de performance pour stresser le programme avec une grande quantité de travail <br>
-                    -Les tests de fiabilité pour vérifier des cas rares qui pourraient causer des problèmes dans l’exécution de programme auxquels le créateur n’aurait pas pensé. <br>
-                    -Les tests linguistiques pour vérifier la qualité de l’internationalisation du programme. <br><br>
+                    <br>
+                    Le terme serveur web désigne à la fois un logiciel et l’ordinateur sur lequel ce logiciel tourne. Il sert à répondre aux requêtes postées sur le réseau en utilisant un protocole comme HTTP, le plus commun. Le terme est le même peu importe que ce soit pour un réseau privé (intranet) ou public (internet).  
+                    <br><br>
                 </p>
             </div>
         </div>
