--- a/serveur_web.html
+++ b/serveur_web.html
@@ -23,14 +23,15 @@
             <div class="inside">
                 <h3>SERVEUR WEB</h3>   
                 <p>
-                    Le testeur de logiciel est une personne ayant pour mission de repérer les erreurs dans les logiciels produits par d’autres informaticiens ainsi que l’adhérence au cahier des charges du logiciel.  <br>
+                    Le terme serveur web désigne à la fois un logiciel et l’ordinateur sur lequel ce logiciel tourne. Il sert à répondre aux requêtes postées sur le réseau en utilisant un protocole comme HTTP, le plus commun. Le terme est le même peu importe que ce soit pour un réseau privé (intranet) ou public (internet).  
                     <br><br><br>
                 </p>
                 <img src="open source.jpg">
                 <p>
                     <br>
-                    Le terme serveur web désigne à la fois un logiciel et l’ordinateur sur lequel ce logiciel tourne. Il sert à répondre aux requêtes postées sur le réseau en utilisant un protocole comme HTTP, le plus commun. Le terme est le même peu importe que ce soit pour un réseau privé (intranet) ou public (internet).  
+                    Les requêtes sont généralement des demandes pour des ressources stockées sur la machine serveur comme des pages web, des images, des vidéos ou d’autres documents, voire même des logiciels. 
                     <br><br>
+                    Ces ressources peuvent être envoyée tel quelles auxquels cas ont les considèrent comme statiques ou construite au cas par cas par le serveur. On les considère alors comme des ressources dynamiques.                      <br><br>
                 </p>
             </div>
         </div>
