--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     </p>
                 </div>
                 </a>
+                <a href="./template_web.html">
                 <div class="article">
                     <h3>TEMPLATE WEB</h3>
                     <img src="template web.jpg">
@@ -60,6 +61,7 @@
                         <br><br>
                     </p>
                 </div>
+                </a>
             </div>
             <div class="type1">
                 <div class="article">
