--- a/testeur_de_logiciel.html
+++ b/testeur_de_logiciel.html
@@ -29,14 +29,14 @@
                 <img src="testeur de logiciel.jpeg">
                 <p>
                     <br><br>Un testeur de logiciel va produire un rapport pour chaque version du produit contenant les erreurs logicielles mais aussi des conseils qualité et des démonstration concrètes des cas d’utilisations. En sommes, il va vérifier que le programme fonctionne et réponds bien à toutes les attentes du client. 
-
+</p><p>
                     <br><br>Afin de réaliser ce rapport, le testeur logiciel va donc identifier, implémenter, installer et exécuter les tests les plus adaptés. Il va ensuite interpréter les résultats de ces tests.  <br>
-                    <br>Les tests réalisés peuvent être classés dans plusieurs groupes :  <br><br>
-                
-                    -Les tests fonctionnels pour vérifier l’adhérence au cahier des charges.<br>
-                    -Les tests de performance pour stresser le programme avec une grande quantité de travail <br>
-                    -Les tests de fiabilité pour vérifier des cas rares qui pourraient causer des problèmes dans l’exécution de programme auxquels le créateur n’aurait pas pensé. <br>
-                    -Les tests linguistiques pour vérifier la qualité de l’internationalisation du programme. <br><br>
+</p><p>                   <br>Les tests réalisés peuvent être classés dans plusieurs groupes :  <br><br>
+   
+                    &ensp;-&ensp;Les tests fonctionnels pour vérifier l’adhérence au cahier des charges.<br>
+                    &ensp;-&ensp;Les tests de performance pour stresser le programme avec une grande quantité de travail <br>
+                    &ensp;-&ensp;Les tests de fiabilité pour vérifier des cas rares qui pourraient causer des problèmes dans l’exécution de programme auxquels le créateur n’aurait pas pensé. <br>
+                    &ensp;-&ensp;Les tests linguistiques pour vérifier la qualité de l’internationalisation du programme. <br><br>
                 </p>
             </div>
         </div>
