--- a/template_web.html
+++ b/template_web.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Serveur Web</title>
+        <title>Template Web</title>
         <link rel="stylesheet" href="main.css">
         <link rel="icon" href="mini.ico" type="image/x-icon">
     </head>
@@ -21,18 +21,16 @@
 
         <div class="content">
             <div class="inside">
-                <h3>SERVEUR WEB</h3>   
+                <h3>TEMPLATE WEB</h3>   
                 <p>
-                    Le terme serveur web désigne à la fois un logiciel et l’ordinateur sur lequel ce logiciel tourne. Il sert à répondre aux requêtes postées sur le réseau en utilisant un protocole comme HTTP, le plus commun. Le terme est le même peu importe que ce soit pour un réseau privé (intranet) ou public (internet).  
+                    Un gabarit permet de définir une structure réutilisable pour assurer la cohérence d’un site web. L’apparence du site web étant définie par le gabarit, seul le contenu doit être écrit pour une nouvelle page et un changement du gabarit affecte toutes les pages du site web.
                     <br><br><br>
                 </p>
                 <img src="open source.jpg">
                 <p>
                     <br>
-                    Les requêtes sont généralement des demandes pour des ressources stockées sur la machine serveur comme des pages web, des images, des vidéos ou d’autres documents, voire même des logiciels. 
-                    <br><br>
-                    Ces ressources peuvent être envoyée tel quelles auxquels cas ont les considèrent comme statiques ou construite au cas par cas par le serveur. On les considère alors comme des ressources dynamiques.                      <br><br>
-                </p>
+                    Un « template », ou « gabarit » en français est, dans le contexte informatique, un moyen de séparer le fond de la forme. 
+                    La présentation des page web est souvent gérée par des documents CSS (Cascading Style Sheet) remplie par le développeur mais peux aussi être fournie préremplie par les outils de créations de site.                  </p>
             </div>
         </div>
     </body>
