--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 </a>
             </div>
             <div class="type1">
+                <a href="./aws.html">
                 <div class="article">
                     <h3>AMAZON WEB SERVICES</h3>   
                     <img src="aws.jpg">
@@ -76,6 +77,7 @@
                         <br>— ARTICLE DU 16.OCT 2024
                     </p>
                 </div>
+                </a>
             </div>
             <div class="type2">
                 <div class="article" style="border:0">
