--- a/template_web.html
+++ b/template_web.html
@@ -26,7 +26,7 @@
                     Un gabarit permet de définir une structure réutilisable pour assurer la cohérence d’un site web. L’apparence du site web étant définie par le gabarit, seul le contenu doit être écrit pour une nouvelle page et un changement du gabarit affecte toutes les pages du site web.
                     <br><br><br>
                 </p>
-                <img src="open source.jpg">
+                <img src="template web.jpg">
                 <p>
                     <br>
                     Un « template », ou « gabarit » en français est, dans le contexte informatique, un moyen de séparer le fond de la forme. 
