--- a/aws.html
+++ b/aws.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Testeur de Logiciel</title>
+        <title>Amazon Web Services</title>
         <link rel="stylesheet" href="main.css">
         <link rel="icon" href="mini.ico" type="image/x-icon">
     </head>
@@ -21,12 +21,15 @@
 
         <div class="content">
             <div class="inside">
-                <h3>TESTEUR DE LOGICIEL</h3>   
-                <p>
-                    Le testeur de logiciel est une personne ayant pour mission de repérer les erreurs dans les logiciels produits par d’autres informaticiens ainsi que l’adhérence au cahier des charges du logiciel.  <br>
-                    <br><br>
+                <h3>AMAZON WEB SERVICES</h3>   
+                <p><br>
+                    Amazon Web Services. C’est l’offre de server hosting de la multinationale Amazon. Ils furent un des premiers hébergeurs à offrir des offres variables, c’est à dire que les prix d’abonnements évoluent en fonction du trafic utilisé. Leurs prix restent aujourd’hui imbattables et c’est une des parties du business d’Amazon qui leur fait le plus de profits. <br>
+                    <br>
                 </p>
-                <img src="testeur de logiciel.jpeg">
+                <img src="aws.jpg">
+                <p><br><br>
+                    Grâce à leur taille importante, ils ont des offres adaptées à presque tous les besoins. 
+                </p>
             </div>
         </div>
     </body>
