--- a/testeur_de_logiciel.html
+++ b/testeur_de_logiciel.html
@@ -38,6 +38,15 @@
                     &ensp;-&ensp;Les tests de fiabilité pour vérifier des cas rares qui pourraient causer des problèmes dans l’exécution de programme auxquels le créateur n’aurait pas pensé. <br>
                     &ensp;-&ensp;Les tests linguistiques pour vérifier la qualité de l’internationalisation du programme. <br><br>
                 </p>
+
+
+                <p>
+                    sources
+                </p>
+                <p><a href="https://www.hellowork.com/fr-fr/metiers/testeur-logiciel.html">hellowork.com</a>
+                </p><p>
+                    <a href="	https://metiers.siep.be/metier/testeur-testeuse-logiciel/"> metiers.siep.be</a>
+                </p>
             </div>
         </div>
     </body>
