--- a/mySQL.html
+++ b/mySQL.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Testeur de Logiciel</title>
+        <title>MySQL</title>
         <link rel="stylesheet" href="main.css">
         <link rel="icon" href="mini.ico" type="image/x-icon">
     </head>
@@ -22,23 +22,21 @@
         <div class="content">
             <div class="inside">
                 <h3>MySQL</h3>   
-                <p>
+                <p><br>
                     Prononcé “M-aïe es-ku-elle" en français et “M-aïe sikwel” à l’internationale, MySQL est la base de données Open-source la plus utilisée. MySQL est développée par Oracle
-                </p>
-                <p>
-                    Une base de données est un ensemble structuré d’informations organisées pour être facilement accessibles, gérées et mises à jour. MySQL utilise un modèle de base de données relationnelle. C’est à dire que les données sont enregistrées dans des tables distinctes contenant des données similaires et leurs relations avec des données dans d’autres tables. Ces relations peuvent lier des entrées selon des critères différents selon les besoins.
-                </p><p>
-                    Le stockage de ces tables dans des fichiers physiques différents plutôt que dans un unique grand fichier permets une optimisation impossible dans d’autres modèles de base de données.
+                    <br><br></p>
 
-
-                </p><p>
-                    Le SQL de MySQL signifie “structured query language” (langage de requêtes structurées). Le SQL est le langage standard le plus utilisé pour gérer les accès aux bases de données. 
-                </p><p>
-                    MySQL étant open-source, le programme et son code peuvent être obtenu gratuitement et modifié par les utilisateurs sous licence GNU GPL. Une License commerciale est également disponible si elle correspond mieux aux besoins de l’utilisateur.
-                </p><p>
-                    Cet état de logiciel open-source a fait qu'au cours de son existence MySQL a été rendu compatible avec la plupart des langages informatiques.
-                </p>
                 <img src="sql.jpg">
+                <p><br><br>
+                    Une base de données est un ensemble structuré d’informations organisées pour être facilement accessibles, gérées et mises à jour. MySQL utilise un modèle de base de données relationnelle. C’est à dire que les données sont enregistrées dans des tables distinctes contenant des données similaires et leurs relations avec des données dans d’autres tables. Ces relations peuvent lier des entrées selon des critères différents selon les besoins.                     Le stockage de ces tables dans des fichiers physiques différents plutôt que dans un unique grand fichier permets une optimisation impossible dans d’autres modèles de base de données.
+                </p>
+            <p><br>
+                Le SQL de MySQL signifie “structured query language” (langage de requêtes structurées). Le SQL est le langage standard le plus utilisé pour gérer les accès aux bases de données. 
+            </p><p>
+                MySQL étant open-source, le programme et son code peuvent être obtenu gratuitement et modifié par les utilisateurs sous licence GNU GPL. Une License commerciale est également disponible si elle correspond mieux aux besoins de l’utilisateur.
+            </p><p><br>
+                Cet état de logiciel open-source a fait qu'au cours de son existence MySQL a été rendu compatible avec la plupart des langages informatiques.
+            </p>
             </div>
         </div>
     </body>
