--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 </a>
             </div>
             <div class="type2">
+                <a href="./mySQL.html">
                 <div class="article" style="border:0">
                     <h3>MYSQL</h3>
                     <img src="sql.jpg">
@@ -91,6 +92,8 @@
                         <br><br>
                     </p>
                 </div>
+                </a>
+                <a href="url.html">
                 <div class="article">
                     <h3>URL</h3>
                     <img src="url.jpg">
@@ -103,6 +106,7 @@
                         <br><br>
                     </p>
                 </div>
+                </a>
             </div>
         </div>
     </body>
