--- a/index.html
+++ b/index.html
@@ -108,6 +108,47 @@
                 </div>
                 </a>
             </div>
+            <div class="type3">
+                <a href="">
+                <div class="article">
+                    <h3>URL</h3>
+                    <img src="sql.jpg">
+                    <p>
+                        <br>
+                        Le SQL de MySQL signifie “structured query language” (langage de requêtes structurées). Le SQL est le langage standard le plus utilisé pour gérer les accès aux bases de données.  
+                        <br><br>
+                        [...] 
+                        <br><br>
+                    </p>
+                </div>
+                </a>
+                <a href="">
+                <div class="article">
+                    <h3>W3C</h3>
+                    <img src="sql.jpg">
+                    <p>
+                        <br>
+                        Le SQL de MySQL signifie “structured query language” (langage de requêtes structurées). Le SQL est le langage standard le plus utilisé pour gérer les accès aux bases de données.  
+                        <br><br>
+                        [...] 
+                        <br><br>
+                    </p>
+                </div>
+                </a>
+                <a href="">
+                <div class="article">
+                    <h3>LE PIRATAGE</h3>
+                    <img src="3__FRONT_B4_1_028_029.jpg">
+                    <p>
+                        <br>
+                        Le SQL de MySQL signifie “structured query language” (langage de requêtes structurées). Le SQL est le langage standard le plus utilisé pour gérer les accès aux bases de données.  
+                        <br><br>
+                        [...] 
+                        <br><br>
+                    </p>
+                </div>
+                </a>
+            </div>
         </div>
     </body>
 </html>
