--- a/index.html
+++ b/index.html
@@ -109,41 +109,38 @@
                 </a>
             </div>
             <div class="type3">
-                <a href="">
+                <a href="url.html">
                 <div class="article">
                     <h3>URL</h3>
-                    <img src="sql.jpg">
+                    <img src="url.jpg">
                     <p>
                         <br>
-                        Le SQL de MySQL signifie “structured query language” (langage de requêtes structurées). Le SQL est le langage standard le plus utilisé pour gérer les accès aux bases de données.  
-                        <br><br>
-                        [...] 
+                        Une URL, pour Uniform ressource locator, est une chaine de caractères uniforme qui permet d’identifier une ressource sur le world wide web. 
+                        Le format d’une URL est standardisé. Elle commence toujours par le protocole utilisé suivi de « : ».
                         <br><br>
                     </p>
                 </div>
                 </a>
-                <a href="">
+                <a href="w3c.html">
                 <div class="article">
                     <h3>W3C</h3>
-                    <img src="sql.jpg">
+                    <img src="1535539623151.jpg">
                     <p>
                         <br>
-                        Le SQL de MySQL signifie “structured query language” (langage de requêtes structurées). Le SQL est le langage standard le plus utilisé pour gérer les accès aux bases de données.  
-                        <br><br>
-                        [...] 
+                        Dans un souci d’interopérabilité, d’accessibilité et usabilité, il fut rapidement nécessaire d’établir des standards à suivre pour les pages internet. Le W3C ou World Wide Web Consortium est un organisme fondé dans ce but en 1994.  
                         <br><br>
                     </p>
                 </div>
                 </a>
-                <a href="">
+                <a href="piratage.html">
                 <div class="article">
                     <h3>LE PIRATAGE</h3>
                     <img src="3__FRONT_B4_1_028_029.jpg">
                     <p>
                         <br>
-                        Le SQL de MySQL signifie “structured query language” (langage de requêtes structurées). Le SQL est le langage standard le plus utilisé pour gérer les accès aux bases de données.  
-                        <br><br>
-                        [...] 
+                        Un virus est un programme malveillant qui se propage d’hôte en hôte. Il est désigné pour modifier le comportement de l’ordinateur.  
+
+                        A la différence d’un ver qui est un programme indépendant mais avec les mêmes effets, un virus va modifier un programme déjà installé sur la machine pour se camoufler.  
                         <br><br>
                     </p>
                 </div>
